kubernetes/apps/frappe/erpnext/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app erpnext
spec:
  parentRefs:
    - name: external-prod
      namespace: kube-system
      sectionName: https
  hostnames:
    - erp.${SECRET_DOMAIN_2}
  rules:
    - backendRefs:
        - name: erpnext
          port: 8080
